--- a/style.css
+++ b/style.css
@@ -438,3 +438,40 @@ width: 15px;
     align-items: baseline;
     padding: 5rem 5rem;
 }
+
+.service-info h4{
+    font-size: 3rem;
+    font-weight: 800;
+    line-height: 2;
+}
+
+.service-info p{
+    font-size: 1.6rem;
+    font-weight: 600;
+    max-height: 1000px;
+    line-height: 1.7;
+    margin: auto;
+}
+
+.testimonials{
+    background: var(--second-bg-color);
+}
+
+.testimonials-box{
+background-size: cover;
+display: flex;
+align-items: center;
+justify-content: center;
+flex-direction: column;
+}
+
+.testimonials .heading{
+    margin-bottom: 5rem;
+}
+
+.testimonials-box img{
+    width: 15rem;
+    border-radius: 50%;
+    border: 3px solid var(--main-color);
+    box-shadow: 0 0 25px var(--main-color);
+}
